<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/RLMain"
    android:background="@drawable/main_background"
    tools:context="com.example.evgeny.cardamage_project.MainScreen"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeUser"
        android:id="@+id/changeUserButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textColor="#0f3d5a"
        android:textStyle="bold|italic"
        android:background="@drawable/transparent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:gravity="top"
        android:layout_above="@+id/changeUserButton"
        android:layout_alignEnd="@+id/changeUserButton">

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/NewReport"
            android:id="@+id/NewReportButton"
            android:background="@drawable/transparent"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/History"
                android:id="@+id/textViewHistory"
                android:textStyle="bold|italic"
                android:textSize="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:id="@+id/TR1"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:id="@+id/TR2" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:id="@+id/TR3" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:id="@+id/TR4" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:id="@+id/TR5" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Seasrch"
        android:id="@+id/searchReport"
        android:layout_alignTop="@+id/changeUserButton"
        android:layout_alignParentStart="true"
        android:background="@drawable/transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helloUser"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
